# vmpc

./: .gitignore  CMakeLists.txt  README.md
ctoot/: CMakeLists.txt
ctoot/src/control/: AbstractLaw.cpp  AbstractLaw.hpp  BooleanControl.cpp  BooleanControl.hpp  BypassControl.cpp  BypassControl.hpp  ChainMutation.cpp  ChainMutation.hpp  CompoundControl.cpp  CompoundControl.hpp  CompoundControlChain.cpp  CompoundControlChain.hpp  CompoundControlMidiPersistence.cpp  CompoundControlMidiPersistence.hpp  CompoundControlPersistence.hpp  Control.cpp  Control.hpp  ControlColumn.cpp  ControlColumn.hpp  ControlLaw.cpp  ControlLaw.hpp  ControlRow.cpp  ControlRow.hpp  EnumControl.cpp  EnumControl.hpp  FloatControl.cpp  FloatControl.hpp  LawControl.cpp  LawControl.hpp  LinearLaw.cpp  LinearLaw.hpp  LogLaw.cpp  LogLaw.hpp
ctoot/src/synth/: BasicMidiSynth.cpp  BasicMidiSynth.hpp  ChannelledSynthControls.cpp  ChannelledSynthControls.hpp  ControlChange.cpp  ControlChange.hpp  MidiChannel.hpp  MidiSynth.hpp  SynthChannel.cpp  SynthChannel.hpp  SynthChannelControls.cpp  SynthChannelControls.hpp  SynthControls.cpp  SynthControls.hpp  SynthRack.cpp  SynthRack.hpp  SynthRackControls.cpp  SynthRackControls.hpp  SynthRackObserver.cpp  SynthRackObserver.hpp
ctoot/src/util/: RouteObserver.cpp  RouteObserver.hpp
moduru/: CMakeLists.txt
moduru/src/: Logger.cpp  Logger.hpp  System.cpp  System.hpp  VecUtil.cpp  VecUtil.hpp
moduru/src/file/: BitUtil.cpp  BitUtil.hpp  ByteUtil.cpp  ByteUtil.hpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileHandle.cpp  FileHandle.hpp  FileSystem.cpp  FileSystem.hpp  FileUtil.cpp  FileUtil.hpp  FsNode.cpp  FsNode.hpp
moduru/src/gui/: BMFParser.cpp  BMFParser.hpp  BMFStructs.hpp  BasicStructs.hpp  Bressenham.cpp  Bressenham.hpp  Dimension.cpp  Dimension.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  PolygonPathIterator.cpp  PolygonPathIterator.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp
moduru/src/io/: BufferedInputStream.cpp  BufferedInputStream.hpp  BufferedOutputStream.cpp  BufferedOutputStream.hpp  ByteArrayInputStream.cpp  ByteArrayInputStream.hpp  CachedOutputStream.cpp  CachedOutputStream.hpp  CircularBuffer.cpp  CircularBuffer.hpp  CircularIntBuffer.cpp  CircularIntBuffer.hpp  FileInputStream.cpp  FileInputStream.hpp  FileOutputStream.cpp  FileOutputStream.hpp  FilterInputStream.cpp  FilterInputStream.hpp  FilterOutputStream.cpp  FilterOutputStream.hpp  InputStream.cpp  InputStream.hpp  OutputStream.cpp  OutputStream.hpp  TSCircularBuffer.hpp
moduru/src/lang/: AbstractStringBuilder.cpp  AbstractStringBuilder.hpp  Appendable.hpp  CaseInsensitiveComparator.cpp  CaseInsensitiveComparator.hpp  CharSequence.hpp  Character.cpp  Character.hpp  CharacterCache.cpp  CharacterCache.hpp  Comparable.hpp  Double.cpp  Double.hpp  DoubleConsts.hpp  FDBigInt.cpp  FDBigInt.hpp  Float.cpp  Float.hpp  FloatConsts.cpp  FloatConsts.hpp  FloatingDecimal.cpp  FloatingDecimal.hpp  FpUtils.cpp  FpUtils.hpp  Integer.cpp  Integer.hpp  IntegerCache.cpp  IntegerCache.hpp  Number.cpp  Number.hpp  Object.cpp  Object.hpp  StrUtil.cpp  StrUtil.hpp  String.cpp  String.hpp  StringBuffer.cpp  StringBuffer.hpp  StringBuilder.cpp  StringBuilder.hpp  (+6 more)
moduru/src/math/: Math.cpp  Math.hpp
moduru/src/observer/: Observable.cpp  Observable.hpp  Observer.hpp
moduru/src/sys/: Home.cpp  Home.hpp
moduru/src/thirdp/: concurrentqueue.h
moduru/src/util/: Arrays.cpp  Arrays.hpp  Comparator.hpp  Enumeration.hpp  StringTokenizer.cpp  StringTokenizer.hpp
mpc/: CMakeLists.txt
mpc/src/: Mpc.cpp  Mpc.hpp  StartUp.cpp  StartUp.hpp  Util.cpp  Util.hpp
mpc/src/audiomidi/: AudioMidiServices.cpp  AudioMidiServices.hpp  DirectToDiskSettings.cpp  DirectToDiskSettings.hpp  EventHandler.cpp  EventHandler.hpp  ExportAudioProcessAdapter.cpp  ExportAudioProcessAdapter.hpp  MpcMidiInput.cpp  MpcMidiInput.hpp  MpcMidiPorts.cpp  MpcMidiPorts.hpp
mpc/src/command/: CopySelectedNote.cpp  KeepSound.cpp
mpc/src/controls/: AbstractControls.cpp  AbstractControls.hpp  Controls.cpp  Controls.hpp  GlobalReleaseControls.cpp  GlobalReleaseControls.hpp  KbMapping.cpp  KbMapping.hpp  KbMouseController.cpp  KbMouseController.hpp
mpc/src/ctootextensions/: DummyAudioProcess.cpp  DummyAudioProcess.hpp  InterconnectionInputProcess.cpp  InterconnectionInputProcess.hpp  InterconnectionOutputProcess.cpp  InterconnectionOutputProcess.hpp  MpcBasicSoundPlayerChannel.cpp  MpcBasicSoundPlayerChannel.hpp  MpcEnvelopeControls.cpp  MpcEnvelopeControls.hpp  MpcFaderControl.cpp  MpcFaderControl.hpp  MpcInputAdapter.cpp  MpcInputAdapter.hpp  MpcMixerInterconnection.cpp  MpcMixerInterconnection.hpp  MpcMultiMidiSynth.cpp  MpcMultiMidiSynth.hpp  MpcMultiSynthControls.cpp  MpcMultiSynthControls.hpp  MpcSoundOscillatorControls.cpp  MpcSoundOscillatorControls.hpp  MpcSoundPlayerChannel.cpp  MpcSoundPlayerChannel.hpp  MpcSoundPlayerControls.cpp  MpcSoundPlayerControls.hpp  Voice.cpp  Voice.hpp
mpc/src/disk/: AbstractDisk.cpp  AbstractDisk.hpp  PgmToProgramConverter.cpp  ProgramImportAdapter.cpp  SoundLoader.cpp  SoundLoader.hpp  SoundSaver.cpp  SoundSaver.hpp  StdDisk.cpp  StdDisk.hpp  Store.cpp
mpc/src/hardware/: Button.cpp  Button.hpp  DataWheel.cpp  DataWheel.hpp  Hardware.cpp  Hardware.hpp  HwPad.cpp  HwPad.hpp  Led.cpp  Led.hpp  Pot.cpp  Pot.hpp  Slider.cpp  Slider.hpp
mpc/src/lcdgui/: Background.cpp  Background.hpp  BlinkLabel.cpp  BlinkLabel.hpp  Component.cpp  Component.hpp  EnvGraph.cpp  EnvGraph.hpp  Field.cpp  Field.hpp  FunctionKeys.cpp  FunctionKeys.hpp  HorizontalBar.cpp  HorizontalBar.hpp  Info.cpp  Knob.cpp  Knob.hpp  Label.cpp  Label.hpp  Layer.cpp  Layer.hpp  LayeredScreen.cpp  LayeredScreen.hpp  MixerFaderBackground.cpp  MixerFaderBackground.hpp  (+21 more)
wdl-ol/: CMakeLists.txt  common.xcconfig
wdl-ol/ASIO_SDK/: CMakeLists.txt
wdl-ol/IPlugExamples/: CMakeLists.txt
wdl-ol/VST3_SDK/: CMakeLists.txt
wdl-ol/VST_SDK/: CMakeLists.txt
wdl-ol/WDL/: CMakeLists.txt  fft.c  filebrowse.cpp  heapbuf.h  merge with dwl-fab.vdiff  mutex.h  rfb_client.cpp  win32_utf8.c
wdl-ol/cmake/: IPlugMacros.inc  IPlugProject.inc
(+800 files in other folders)
